--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pokeapi-js-wrapper": "^1.2.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
